[ADD]website: add new FAQ roller snippet like fade in/out

--- a/addons/website/static/src/css/website.sass
+++ b/addons/website/static/src/css/website.sass
@@ -406,6 +406,18 @@ ul.nav-stacked > li > a
         &.pull-left
             margin-right: 32px
 
+/* ---- FAQ Roller Snippet ---- */
+
+.oe_faq_group
+    .oe_faq_default
+        margin-bottom: -6px !important
+    .oe_faq_sec
+        cursor: pointer
+        background-color: #F5F5F5
+        .oe_faq_heading h3
+            margin-top: 5px
+            margin-bottom: 5px
+
 
 /* gallery */
 
