--- a/addons/website/static/src/css/website.css
+++ b/addons/website/static/src/css/website.css
@@ -541,6 +541,19 @@ ul.nav-stacked > li > a {
   margin-right: 32px;
 }
 
+/* ---- FAQ Roller Snippet ---- */
+.oe_faq_group .oe_faq_default{
+  margin-bottom: -6px !important;
+}
+.oe_faq_group .oe_faq_sec {
+  cursor: pointer;
+  background-color: #F5F5F5;
+}
+.oe_faq_group .oe_faq_sec .oe_faq_heading h3{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 /* gallery */
 .o_gallery.o_grid .img, .o_gallery.o_masonry .img {
   width: 100%;
