--- a/addons/crm/report/crm_phonecall_report_view.xml
+++ b/addons/crm/report/crm_phonecall_report_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
 
 <!-- Phone calls by user and team Pivot View -->
 
@@ -122,5 +121,4 @@
             action="action_report_crm_phonecall"
             id="menu_report_crm_phonecalls_tree" parent="base.next_id_64" sequence="15"/>
 
-    </data>
-</openerp>
+</odoo>
