--- a/addons/crm/wizard/crm_phonecall_to_phonecall_view.xml
+++ b/addons/crm/wizard/crm_phonecall_to_phonecall_view.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0"?>
-<openerp>
-    <data>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
     
     <!-- Phonecall to Phonecall view -->
     
@@ -38,5 +37,4 @@
             <field name="target">new</field>
         </record>
 
-    </data>
-</openerp>   
+</odoo>
