--- a/addons/event_sale/views/report_registrationbadge.xml
+++ b/addons/event_sale/views/report_registrationbadge.xml
@@ -10,48 +10,49 @@
                         <div class="col-xs-6 text-center" style="padding-left:7mm; border-left:1px dashed black; height: 149mm; -webkit-transform:rotate(180deg); padding-top: 7mm">
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <span t-if="o.event_id.organizer_id.company_id.logo_web and o.event_id.organizer_id.is_company">
+                                    <t t-if="o.event_id.event_logo">
+                                        <div t-field="o.event_id.event_logo"/>
+                                    </t>
+                                    <span t-if="not o.event_id.event_logo and o.event_id.organizer_id.company_id.logo_web and o.event_id.organizer_id.is_company">
                                         <img t-att-src="'data:image/png;base64,%s' % o.event_id.organizer_id.company_id.logo_web" style="max-height:1cm; max-width:4cm;"/>
                                     </span>
                                     <h5 t-field="o.event_id.name"/>
                                     <h5>( <i class="fa fa-clock-o"></i> <span itemprop="startDate" t-field="o.event_id.date_begin" t-field-options='{"hide_seconds":"True"}'> </span> <i>to</i> <span itemprop="endDate" t-field="o.event_id.date_end" t-field-options='{"hide_seconds":"True"}'> </span> )</h5>
                                 </div>
                                 <div class="col-xs-12 text-center">
-                                    <t t-if="o.event_ticket_id">
                                     <div>
-                                        <strong><span t-field="o.event_ticket_id"/></strong>
-                                    </div>
-                                    </t>
-                                    <div>
-                                        <t t-if="o.partner_id.is_company == True">
-                                            <small>
-                                                <h3 t-field="o.partner_id.name"/>
-                                                <h5 t-field="o.name"/>
-                                            </small>
-                                        </t>
+                                        <small>
+                                            <h3 t-if="o.partner_id" t-field="o.partner_id.name"/>
+                                            <h5 t-field="o.name"/>
+                                        </small>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 mt32 text-center" style="background: lightgrey;">
-                                    <h3>Status</h3>
+                                <t t-if="o.event_ticket_id">
+                                    <div class="col-xs-12 mt32 text-center" style="background: lightgrey; height: 65px">
+                                        <h3><span t-field="o.event_ticket_id"/></h3>
+                                    </div>
+                                </t>
+                                <div class="row">
+                                    <div t-field="o.event_id.badge_front"></div>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Inner left -->
+                        <!-- Back -->
                         <div class="col-xs-6" style="padding-right:7mm; height: 149mm; -webkit-transform:rotate(180deg); padding-top: 2mm;">
-                            <span t-field="o.event_id.badge_back"/>
+                            <div t-field="o.event_id.badge_back"/>
                         </div>
                     </div>
 
                     <div class="row">
-                        <!-- Back -->
+                        <!-- Inner left -->
                         <div class="col-xs-6 text-center" style="padding-right:7mm; border-top:1px dashed black; height: 148mm;">
-                            <span t-field="o.event_id.badge_innerleft"/>
+                            <div t-field="o.event_id.badge_innerleft"/>
                         </div>
 
-                        <!-- Front -->
+                        <!-- Inner right -->
                         <div class="col-xs-6 text-center" style="border-left:1px dashed black; border-top:1px dashed black; height: 148mm; text-center">
-                            <span t-field="o.event_id.badge_innerright"/>
+                            <div t-field="o.event_id.badge_innerright"/>
                         </div>
                     </div>
                 </div>
