[ADD] mail: timeline view

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -918,6 +918,8 @@ $sheet-padding: 16px
                 content: "\f0ce"
             .oe-cp-switch-tree:before
                 content: "\f036"
+            .oe-vm-switch-timeline:before
+                content: "\f0ce"
         .oe-cp-buttons
             display: inline-block
         .oe-cp-sidebar
@@ -1329,7 +1331,7 @@ $sheet-padding: 16px
     // }}}
     // FormView.base and dynamic tags {{{
     .oe_formview
-        background: white
+        background: #f0eeee
     .oe_form_dropdown_section
         position: relative
         display: inline-block
@@ -1442,6 +1444,7 @@ $sheet-padding: 16px
             max-width: $sheet-max-width + 2* $sheet-padding
             margin: 0 auto
             padding: 16px 16px 48px
+            background-color: #f0eeee
         div.oe_form_configuration
             p, ul, ol
                 color: #aaa
