[WIP] : timeline view inbox

--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -361,6 +361,12 @@
             transition: opacity 0.2s linear; 
 }
 
+/* -------------- parent message -------------- */
+
+.openerp .oe_timeline .oe_tl_parent_message {
+    border : solid black 1px;
+}
+
 /* ----------------- message ----------------- */
 
 .openerp .oe_timeline .oe_tl_msg_message {
