[ADD]website_sale: add option Collapse category list in customize menu and add template for collapsible public categories list

--- a/addons/website_sale/static/src/css/website_sale.css
+++ b/addons/website_sale/static/src/css/website_sale.css
@@ -429,3 +429,14 @@ ul.wizard li:first-child {
 .label-optional {
   font-weight: normal;
 }
+
+/* Collapse category */
+#collapse_category li a{
+  display: inline-block; 
+  width: 12vw;
+  padding-left: 3px; 
+  margin-left: 3px; 
+}
+#collapse_category li i.fa{
+  cursor: pointer;
+}
