--- a/addons/website_sale/static/src/css/website_sale.sass
+++ b/addons/website_sale/static/src/css/website_sale.sass
@@ -441,3 +441,15 @@ ul.wizard li:first-child
 /* Shipping & Billing */
 .label-optional
     font-weight: normal
+
+/* Collapse category */
+#collapse_category
+    li
+        a
+            display: inline-block
+            width: 12vw
+            padding-left: 3px
+            margin-left: 3px
+
+        i.fa
+            cursor: pointer
