[IMP]website_blog: improve the paragrapgh level commit and maitain the path to maintain the comment on particular paragraph
[IMP]improve the adding and removing paraph id on dom insert and remove manage parpagraph id

[IMP]on enter remove the p tag data-chatter-id for papragraph level comment.

[IMP]remove the changes because discuss with chm css_editable_mode_hidden issue is fixed latter on in master by chm

[IMP]press enter on starting of paragraph replace the parpagraph id of old one else remove the new papragraph id

[IMP]improve the code

--- a/addons/website_blog/static/src/css/website_blog.css
+++ b/addons/website_blog/static/src/css/website_blog.css
@@ -172,6 +172,7 @@ div#blog_angle_down a:hover {
   width: 250px;
   overflow: auto;
   font-weight: normal;
+  padding-bottom: 0px;
 }
 
 mark + .popover, .cover_footer{
