--- a/addons/planner/static/src/less/planner.less
+++ b/addons/planner/static/src/less/planner.less
@@ -518,6 +518,163 @@
                 margin-bottom: 0.5em;
             }
         }
+
+        // PARAGRAPHS
+        .paragraphs .icon {
+            text-align: center;
+            font-size: 2em;
+            margin: 1em auto .5em;
+            color: #A24689;
+        }
+
+        //NOTEBOOK
+        .notebook-container {
+            margin: 20px 0;
+        }
+        .notebook {
+            color: #555;
+            font-size: 22px;
+            padding: 0 !important;
+            width: 100%;
+            font-family: courier, monospace;
+            border: 1px solid #faebcc;
+            margin: 0;
+            color: #8a6d3b;
+            position: relative;
+            z-index: 1;
+            background-color: #fcf8e3;
+
+            textarea,input {
+                background: #fcf8e3;
+                border: none;
+                font-size: 15px;
+                line-height: 17px;
+            }
+            > li {
+                list-style: none;
+                border-bottom: 1px dashed #C1D6DA;
+                height: auto;
+                padding: 10px 10px 5px 55px;
+                text-transform: capitalize;
+                margin: 0;
+                span {
+                    position: absolute;
+                    left: 9px;
+                    color: rgb(199, 180, 146);
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+            }
+            > li:last-child { border-bottom: 0;}
+
+            li.header {
+                h5{padding-left: 0px}
+                div.dropdown { display: inline;float:right; }
+                span {position: relative; left: 0;}
+                a {
+                    color: #C4A87A;
+                    position: absolute;
+                    top: 13px;
+                    right: 13px;
+                    &:hover {
+                        text-decoration: none;
+                        color: #9C855D;
+                    }
+                }
+                select {
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                    width: 100%;
+                    max-width: 80%;
+                    font-family: sans-serif;
+                    font-size: 17px;
+                    color: #8A6D3B;
+                    border: none;
+                    background: #F5E7CF;
+                }
+
+                .help{
+                    font-size: 14px;
+                    color: rgb(126, 95, 41);
+                    background: #fcf8e3;
+                    background: -moz-linear-gradient(top,  #fcf8e3 0%, #FFF8D7 100%);
+                    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcf8e3), color-stop(100%,#FFF8D7));
+                    background: -webkit-linear-gradient(top,  #fcf8e3 0%,#FFF8D7 100%);
+                    background: -o-linear-gradient(top,  #fcf8e3 0%,#FFF8D7 100%);
+                    background: -ms-linear-gradient(top,  #fcf8e3 0%,#FFF8D7 100%);
+                    background: linear-gradient(to bottom,  #fcf8e3 0%,#FFF8D7 100%);
+                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcf8e3', endColorstr='#FFF8D7',GradientType=0 );
+                    padding: 0 1em;
+                    margin: 0;
+                    border: none;
+                    z-index: 10;
+                    position: relative;
+                    box-shadow: inset 0 10px 10px -9px #A89E64;
+                    margin: 0px -10px 0px -55px;
+
+                    h5 {padding: 14px 0 0; text-indent:0; display: inline-block;}
+                    ul { padding: 0 20px 20px 50px;}
+                    li {text-indent: 0; font-style: italic;}
+                }
+            }
+            > li:not(.header):hover {
+                background-color: #F5EFD0;
+                -webkit-transition: all 0.2s;
+                -moz-transition:    all 0.2s;
+                -ms-transition:     all 0.2s;
+                -o-transition:      all 0.2s;
+            }
+            .lines {
+                border-left: 1px solid #ffaa9f;
+                border-right: 1px solid #ffaa9f;
+                background: transparent;
+                position: absolute;
+                width: 3px;
+                height: 100%;
+                top: 0;
+                left: 42px;
+                border-bottom: 0;
+                border-top: 0;
+            }
+        }
+        .notebook.columns {
+            li.header{
+                padding: 10px 10px 5px 55px;
+                h5{padding: 0}
+            }
+            textarea,input {
+                vertical-align: top;
+                margin-bottom: 1em;
+            }
+        }
+        .notebook-container:after {
+            content: "";
+            display: block;
+            width: 94%;
+            left: 20px;
+            background: transparent;
+            height: 100%;
+            position: absolute;
+            bottom: -5px;
+            z-index: 0;
+            background-color: #fcf8e3;
+            border: 1px solid #faebcc;
+        }
+        .info_icon{
+            position: relative;
+            padding-left: 5em;
+            overflow: hidden;
+            min-height: 6em;
+            span.fa{
+                position: absolute;
+                font-size: 5em;
+                top: 0.2em;
+                left: 0.2em;
+                opacity: 0.6;
+                color: white;
+            }
+        }
+        .alert-info.info_icon span.fa { color: #8ABCD4; }
     }
     &.odoo_colors {
         a {color: #2E917D}
