--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -393,7 +393,16 @@
 
 .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_subject {
     display: inline-block;
-    width: 550px;  
+    width: 550px;
+    cursor: pointer;
+}
+
+.openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_subject .oe_tl_nb_unread_msg {
+    font-weight: bold; 
+}
+
+.openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_timeline_action_author {
+   color: #337ab7;
 }
 
 /* date */
@@ -480,6 +489,22 @@
 .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_msg_icons .oe_unread:hover i {
     color: #c2ff00;
     text-shadow: 0px 1px #009441,0px -1px #009441, -1px 0px #009441, 1px 0px #009441, 0px 3px 3px rgba(0,0,0,0.1);
+}
+
+/* ------------ expandable message ------------ */ 
+
+.openerp .oe_timeline .oe_tl_thread_expendable {  
+    color: #A4A4A4;
+    padding-bottom: 10px;
+    cursor: pointer; 
+}
+
+.openerp .oe_timeline .oe_tl_thread_expendable span {
+    display: inline-block;
+    border-left: dashed 2px #A4A4A4;
+    margin-left: 1px;
+    padding-left: 290px;
+    text-align: center;
 }
 
 /* ----------------- message ----------------- */
@@ -757,7 +782,7 @@
 }
 
 .openerp .oe_timeline .oe_tl_msg .oe_tl_msg_content .oe_tl_msg_body .oe_timeline_tracking_value_list li {
-    line-height: 27px;
+    line-height: 24px;
 }
 
 .openerp .oe_timeline .oe_tl_msg .oe_tl_msg_content .oe_tl_msg_body .oe_timeline_tracking_value_list .oe_tl_tracking_value {
