[WIP] mail : timeline view messaging (menu)

--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -405,12 +405,6 @@
    color: #337ab7;
 }
 
-/* date */
-
-.openerp .oe_timeline .oe_tl_thread_parent .oe_tl_msg_date {
-    margin-top: 7px;
-}
-
 /* avatar */
 
 .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar {                           
@@ -422,7 +416,7 @@
 }
 
 .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar img {
-    border: solid 1px #CACACA;;
+    border: solid 1px #CACACA;
 }
 
 .openerp .oe_timeline .oe_tl_thread_parent .oe_tl_parent_message .oe_tl_parent_avatar .oe_tl_msg_icon {
