--- a/addons/im_chat/views/im_chat_view.xml
+++ b/addons/im_chat/views/im_chat_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
-        <record id="action_im_chat_shortcode" model="ir.actions.act_window">
+        <record id="im_chat_shortcode_action" model="ir.actions.act_window">
             <field name="name">Chat Shortcode</field>
             <field name="res_model">im_chat.shortcode</field>
             <field name="view_mode">tree,form</field>
@@ -44,4 +44,4 @@
         </record>
 
     </data>
-</openerp>
+</odoo>
