--- a/addons/im_livechat/views/im_livechat_view.xml
+++ b/addons/im_livechat/views/im_livechat_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
-<openerp>
+<odoo>
     <data>
         <!--
             Views for im_chat.session
         -->
         <!-- History : form, list and search views -->
-        <record id="action_session_history" model="ir.actions.act_window">
+        <record id="im_chat_session_action" model="ir.actions.act_window">
             <field name="name">History</field>
             <field name="res_model">im_chat.session</field>
             <field name="view_type">form</field>
@@ -91,7 +91,7 @@
 
 
         <!-- Session of a channel : list view -->
-        <record id="action_session_channel" model="ir.actions.act_window">
+        <record id="im_chat_session_action_from_channel" model="ir.actions.act_window">
             <field name="name">Sessions</field>
             <field name="res_model">im_chat.session</field>
             <field name="view_mode">list,form</field>
@@ -107,7 +107,7 @@
         <!--
             Views for im_livechat.channel
         -->
-        <record id="action_support_channels" model="ir.actions.act_window">
+        <record id="im_livechat_channel_action" model="ir.actions.act_window">
             <field name="name">Live Chat Channels</field>
             <field name="res_model">im_livechat.channel</field>
             <field name="view_mode">kanban,form</field>
@@ -125,8 +125,8 @@
             </field>
         </record>
 
-        <record id="support_channel_kanban" model="ir.ui.view">
-            <field name="name">support_channel.kanban</field>
+        <record id="im_livechat_channel_view_kanban" model="ir.ui.view">
+            <field name="name">im_livechat.channel.kanban</field>
             <field name="model">im_livechat.channel</field>
             <field name="arch" type="xml">
                 <kanban>
@@ -157,8 +157,8 @@
                                                 </i>
                                             </p>
                                             <div style="margin-top:5px;">
-                                                <button t-if="record.are_you_inside.raw_value" name="quit" type="object" class="btn btn-default btn-xs">Quit</button>
-                                                <button t-if="! record.are_you_inside.raw_value" name="join" type="object" class="btn btn-info btn-xs">Join</button>
+                                                <button t-if="record.are_you_inside.raw_value" name="action_quit" type="object" class="btn btn-default btn-xs">Quit</button>
+                                                <button t-if="! record.are_you_inside.raw_value" name="action_join" type="object" class="btn btn-info btn-xs">Join</button>
                                             </div>
                                         </div>
                                     </div>
@@ -170,11 +170,11 @@
             </field>
         </record>
 
-        <record id="support_channel_form" model="ir.ui.view">
-            <field name="name">support_channel.form</field>
+        <record id="im_livechat_channel_view_form" model="ir.ui.view">
+            <field name="name">im_livechat.channel.form</field>
             <field name="model">im_livechat.channel</field>
             <field name="arch" type="xml">
-                <form string="Support Channels" version="7.0">
+                <form>
                 <sheet>
                     <field name="image" widget='image' class="oe_avatar oe_left" options='{"preview_image": "image_medium"}'/>
                     <div class="oe_title">
@@ -183,14 +183,14 @@
                             <field name="name" placeholder="e.g. YourWebsite.com"/>
                         </h1>
                         <div>
-                            <button type="object" name="join" class="oe_highlight" string="Join Channel" attrs='{"invisible": [["are_you_inside", "=", True]]}'/>
-                            <button type="object" name="quit" string="Leave Channel" attrs='{"invisible": [["are_you_inside", "=", False]]}'/>
+                            <button type="object" name="action_join" class="oe_highlight" string="Join Channel" attrs='{"invisible": [["are_you_inside", "=", True]]}'/>
+                            <button type="object" name="action_quit" string="Leave Channel" attrs='{"invisible": [["are_you_inside", "=", False]]}'/>
                             <button type="object" name="test_channel" string="Test" attrs='{"invisible": [["web_page", "=", False]]}'/>
                             <field name="are_you_inside" invisible="1"/>
                         </div>
                     </div>
                     <div class="oe_right oe_button_box" name="buttons">
-                        <button class="oe_inline oe_stat_button" type="action" attrs="{'invisible':[('nbr_session','=', 0)]}" name="%(action_session_channel)d" icon="fa-comments">
+                        <button class="oe_inline oe_stat_button" type="action" attrs="{'invisible':[('nbr_session','=', 0)]}" name="%(im_chat_session_action_from_channel)d" icon="fa-comments">
                             <field string="Sessions" name="nbr_session" widget="statinfo"/>
                         </button>
                         <button name="action_view_rating" attrs="{'invisible':[('rating_percentage_satisfaction','=', -1)]}" class="oe_stat_button" type="object" icon="fa-smile-o">
@@ -284,11 +284,24 @@
 
 
         <!-- Menu items -->
-        <menuitem name="Live Chat" parent="mail.mail_feeds_main" id="im_livechat" groups="group_im_livechat"/>
+        <menuitem  id="im_livechat"
+            name="Live Chat"
+            parent="mail.mail_feeds_main"
+            groups="group_im_livechat_user"/>
 
-        <menuitem name="Channels" parent="im_livechat" id="support_channels" action="action_support_channels" groups="group_im_livechat" sequence="5"/>
+        <menuitem id="im_livechat_channel_menu"
+            name="Channels"
+            action="im_livechat_channel_action"
+            parent="im_livechat"
+            groups="group_im_livechat_user"
+            sequence="5"/>
 
-        <menuitem name="History" parent="im_livechat" id="session_history" action="action_session_history" groups="group_im_livechat" sequence="10"/>
+        <menuitem id="im_chat_session_menu"
+            name="History"
+            action="im_chat_session_action"
+            parent="im_livechat"
+            groups="group_im_livechat_user"
+            sequence="10"/>
 
     </data>
-</openerp>
+</odoo>
