--- a/addons/website_blog/views/website_blog_templates.xml
+++ b/addons/website_blog/views/website_blog_templates.xml
@@ -294,7 +294,7 @@
     </xpath>
     <xpath expr="//ul[@id='comments-list']" position="before">
         <section class="mb32 read_width css_editable_mode_hidden">
-            <form id="comment" t-attf-action="/blog/post_comment" method="POST">
+            <form id="comment" class="js_submit_loading" t-attf-action="/blog/post_comment" method="POST">
                 <div class="media">
                     <span class="pull-left">
                         <img t-if="user_id.partner_id.image_small" class="img img-circle media-object" t-att-src="website.image_url(user_id.partner_id, 'image_small')" style="width: 30px"/>
@@ -302,7 +302,7 @@
                     <div class="media-body">
                         <input name="blog_post_id" t-att-value="blog_post.id" type="hidden"/>
                         <textarea rows="3" name="comment" class="form-control" placeholder="Write a comment..."></textarea>
-                        <button type="submit" class="btn btn-primary mt8">Post</button>
+                        <button type="submit" id="btn-loading" data-loading-text="Posting..." class="btn btn-primary mt8">Post</button>
                     </div>
                 </div>
             </form>
