--- a/addons/website_hr_recruitment/views/templates.xml
+++ b/addons/website_hr_recruitment/views/templates.xml
@@ -152,7 +152,7 @@
                 <div class="row">
                     <section id="forms">
                         <!-- TODO Multilingual form action support ? -->
-                        <form class="form-horizontal mt32" action="/jobs/thankyou" method="post" enctype="multipart/form-data">
+                        <form class="form-horizontal mt32 js_submit_loading" action="/jobs/thankyou" method="post" enctype="multipart/form-data">
                             <input type="hidden" t-att-value="job and job.department_id.id or False" name="department_id"/>
                             <input type="hidden" t-att-value="job and job.id or False" name="job_id"/>
                             <div t-attf-class="form-group #{error.get('partner_name') and 'has-error' or ''}">
@@ -188,7 +188,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-md-offset-3 col-sm-offset-4 col-sm-8 col-md-7">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <button type="submit" id="btn-loading" class="btn btn-primary" data-loading-text="Posting...">Submit</button>
                                 </div>
                             </div>
                         </form>
