--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -562,11 +562,11 @@
                     </li>
                 </ul>
                 <div class="css_editable_mode_hidden">
-                    <form id="comment" t-attf-action="/shop/product/comment/#{product.id}" method="POST">
+                    <form id="comment" class="js_submit_loading" t-attf-action="/shop/product/comment/#{product.id}" method="POST">
                         <img class="img pull-left img-rounded" t-att-src="website.image_url(user_id.partner_id, 'image_small')" style="width: 50px; margin-right: 10px;"/>
                         <div class="pull-left mb32" style="width: 75%%">
                             <textarea rows="3" name="comment" class="form-control" placeholder="Write a comment..."></textarea>
-                            <a class="btn btn-primary mt8 a-submit">Post</a>
+                            <a data-loading-text="Posting..." id="btn-loading" class="btn btn-primary mt8 a-submit">Post</a>
                         </div>
                     </form>
                 </div>
