--- a/addons/website_forum/static/src/css/website_forum.css
+++ b/addons/website_forum/static/src/css/website_forum.css
@@ -111,3 +111,16 @@ button.btn-link.text-muted {
   color: #999999;
 }
 
+.search_tips table {
+  padding: 10px 20px;
+  margin-bottom: 10px;
+}
+
+.search_tips .new_group td{
+  padding-top: 6px;
+}
+
+.search_tips .search_note {
+  color: #999;
+  padding-right: 6px;
+}
